--- a/index.html
+++ b/index.html
@@ -1,279 +1,245 @@
-<html><head><base href="https://websim.creation.engine/fifa-predict-pro/">
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-<title>FIFA PREDICT PRO - Prédictions de Match Améliorées</title>
-<script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-<script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
-<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-<script src="https://unpkg.com/framer-motion@4.1.17/dist/framer-motion.js"></script>
-<link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-<style>
-  @keyframes pulse {
-    0%, 100% {
-      opacity: 1;
-    }
-    50% {
-      opacity: 0.5;
-    }
-  }
-  .pulse {
-    animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
-  }
-  .score-list {
-    background-color: #f3f4f6;
-    border-radius: 0.5rem;
-    padding: 1rem;
-    max-height: 200px;
-    overflow-y: auto;
-  }
-  
-  .score-item {
-    display: flex;
-    align-items: center;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
-    border-bottom: 1px solid #e5e7eb;
-  }
-  
-  .score-item:last-child {
-    border-bottom: none;
-  }
-  
-  .score-label {
-    flex: 0 0 auto;
-    width: 4rem;
-    font-size: 0.875rem;
-    font-weight: 600;
-    color: #4b5563;
-  }
-  
-  .score-inputs {
-    display: flex;
-    flex: 1;
-    gap: 0.5rem;
-  }
-  
-  .score-input {
-    flex: 1;
-    max-width: 3rem;
-    font-size: 0.875rem;
-  }
-
-  @media (max-width: 640px) {
-    .sm\:max-w-xl {
-      max-width: 100%;
-      width: 100%;
-    }
-    .sm\:p-12 {
-      padding: 1rem;
-    }
-    .relative.py-3 {
-      padding: 0;
-    }
-    .relative.px-4.py-6 {
-      padding: 1rem;
-    }
-    .probability-container {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  html, body, #root {
-    height: 100%;
-    overflow: hidden;
-  }
-
-  .app-container {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    overflow: hidden;
-    background-image: url('https://websim.creation.engine/fifa-predict-pro/soccer-field-bg.jpg');
-    background-size: cover;
-    background-position: center;
-    background-attachment: fixed;
-  }
-
-  .content-wrapper {
-    flex: 1;
-    overflow-y: auto;
-    background-color: rgba(255, 255, 255, 0.9);
-    backdrop-filter: blur(10px);
-    border-radius: 1rem;
-    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    padding: 1.5rem;
-    width: 100%;
-    max-width: 800px;
-  }
-
-  @media (min-width: 640px) {
-    .content-wrapper {
-      max-width: 600px;
-    }
-  }
-
-  @media (min-width: 768px) {
-    .content-wrapper {
-      max-width: 720px;
-    }
-  }
-
-  @media (min-width: 1024px) {
-    .content-wrapper {
-      max-width: 800px;
-    }
-  }
-
-  .prediction-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    gap: 1rem;
-  }
-
-  .prediction-item {
-    background-color: rgba(45, 55, 72, 0.9);
-    border-radius: 0.5rem;
-    padding: 1rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-  }
-
-  .prediction-item:hover {
-    transform: translateY(-5px);
-    box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
-  }
-
-  .prediction-title {
-    font-size: 1.125rem;
-    font-weight: 600;
-    color: #e2e8f0;
-    margin-bottom: 0.5rem;
-  }
-
-  .prediction-score {
-    font-size: 1.25rem;
-    font-weight: 700;
-    color: #fff;
-  }
-
-  .welcome-message {
-    background-color: rgba(240, 244, 255, 0.9);
-    border-left: 4px solid #4f46e5;
-    padding: 1rem;
-    margin-bottom: 1.5rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-
-  .welcome-message p {
-    font-size: 0.875rem;
-    line-height: 1.5;
-    color: #4b5563;
-  }
-
-  .probability-container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 0.5rem;
-    background-color: rgba(45, 55, 72, 0.9);
-    padding: 1rem;
-    border-radius: 0.5rem;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  }
-
-  @media (max-width: 640px) {
-    .probability-container {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  .probability-item {
-    background-color: rgba(74, 85, 104, 0.9);
-    padding: 0.75rem;
-    border-radius: 0.5rem;
-    text-align: center;
-    transition: transform 0.3s ease;
-  }
-
-  @media (max-width: 640px) {
-    .probability-item {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-  }
-
-  .probability-item h3 {
-    color: #e2e8f0;
-  }
-
-  .probability-item p {
-    color: #fff;
-  }
-
-  footer {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .social-links {
-    display: flex;
-    gap: 1rem;
-    margin-top: 1rem;
-  }
-
-  .social-link {
-    color: #4b5563;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-
-  .social-link:hover {
-    color: #1d4ed8;
-  }
-
-  footer {
-    background-color: rgba(255, 255, 255, 0.9);
-    padding: 0.5rem;
-    text-align: center;
-    font-size: 0.75rem;
-    color: #4b5563;
-    box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.1);
-  }
-
-  .custom-input {
-    background-color: rgba(255, 255, 255, 0.9);
-    border: 1px solid #d1d5db;
-    transition: border-color 0.3s ease, box-shadow 0.3s ease;
-  }
-
-  .custom-input:focus {
-    border-color: #4f46e5;
-    box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.2);
-  }
-
-  .custom-button {
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-
-  .custom-button:hover {
-    transform: translateY(-2px);
-  }
-
-  .loading-overlay {
-    background-color: rgba(0, 0, 0, 0.7);
-    backdrop-filter: blur(5px);
-  }
-
-  .loading-spinner {
-    border-top-color: #4f46e5;
-  }
-</style>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FIFA PREDICT PRO - Prédictions de Match</title>
+    <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script src="https://unpkg.com/framer-motion@4.1.17/dist/framer-motion.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        @keyframes pulse {
+            0%, 100% {
+                opacity: 1;
+            }
+            50% {
+                opacity: 0.5;
+            }
+        }
+        .pulse {
+            animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+        }
+        .score-list {
+            background-color: #f3f4f6;
+            border-radius: 0.5rem;
+            padding: 1rem;
+            max-height: 200px;
+            overflow-y: auto;
+        }
+        .score-item {
+            display: flex;
+            align-items: center;
+            padding: 0.5rem;
+            margin-bottom: 0.5rem;
+            border-bottom: 1px solid #e5e7eb;
+        }
+        .score-item:last-child {
+            border-bottom: none;
+        }
+        .score-label {
+            flex: 0 0 auto;
+            width: 4rem;
+            font-size: 0.875rem;
+            font-weight: 600;
+            color: #4b5563;
+        }
+        .score-inputs {
+            display: flex;
+            flex: 1;
+            gap: 0.5rem;
+        }
+        .score-input {
+            flex: 1;
+            max-width: 3rem;
+            font-size: 0.875rem;
+        }
+        @media (max-width: 640px) {
+            .sm\:max-w-xl {
+                max-width: 100%;
+                width: 100%;
+            }
+            .sm\:p-12 {
+                padding: 1rem;
+            }
+            .relative.py-3 {
+                padding: 0;
+            }
+            .relative.px-4.py-6 {
+                padding: 1rem;
+            }
+            .probability-container {
+                grid-template-columns: 1fr;
+            }
+        }
+        html, body, #root {
+            height: 100%;
+            overflow: hidden;
+        }
+        .app-container {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            overflow: hidden;
+            background-image: url('https://websim.creation.engine/fifa-predict-pro/soccer-field-bg.jpg');
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+        }
+        .content-wrapper {
+            flex: 1;
+            overflow-y: auto;
+            background-color: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            border-radius: 1rem;
+            box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            padding: 1.5rem;
+            width: 100%;
+            max-width: 800px;
+        }
+        @media (min-width: 640px) {
+            .content-wrapper {
+                max-width: 600px;
+            }
+        }
+        @media (min-width: 768px) {
+            .content-wrapper {
+                max-width: 720px;
+            }
+        }
+        @media (min-width: 1024px) {
+            .content-wrapper {
+                max-width: 800px;
+            }
+        }
+        .prediction-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1rem;
+        }
+        .prediction-item {
+            background-color: rgba(45, 55, 72, 0.9);
+            border-radius: 0.5rem;
+            padding: 1rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .prediction-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 8px rgba(0, 0, 0, 0.15);
+        }
+        .prediction-title {
+            font-size: 1.125rem;
+            font-weight: 600;
+            color: #e2e8f0;
+            margin-bottom: 0.5rem;
+        }
+        .prediction-score {
+            font-size: 1.25rem;
+            font-weight: 700;
+            color: #fff;
+        }
+        .welcome-message {
+            background-color: rgba(240, 244, 255, 0.9);
+            border-left: 4px solid #4f46e5;
+            padding: 1rem;
+            margin-bottom: 1.5rem;
+            border-radius: 0.5rem;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .welcome-message p {
+            font-size: 0.875rem;
+            line-height: 1.5;
+            color: #4b5563;
+        }
+        .probability-container {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 0.5rem;
+            background-color: rgba(45, 55, 72, 0.9);
+            padding: 1rem;
+            border-radius: 0.5rem;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+        @media (max-width: 640px) {
+            .probability-container {
+                grid-template-columns: 1fr;
+            }
+        }
+        .probability-item {
+            background-color: rgba(74, 85, 104, 0.9);
+            padding: 0.75rem;
+            border-radius: 0.5rem;
+            text-align: center;
+            transition: transform 0.3s ease;
+        }
+        @media (max-width: 640px) {
+            .probability-item {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+            }
+        }
+        .probability-item h3 {
+            color: #e2e8f0;
+        }
+        .probability-item p {
+            color: #fff;
+        }
+        footer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+        }
+        .social-links {
+            display: flex;
+            gap: 1rem;
+            margin-top: 1rem;
+        }
+        .social-link {
+            color: #4b5563;
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+        .social-link:hover {
+            color: #1d4ed8;
+        }
+        footer {
+            background-color: rgba(255, 255, 255, 0.9);
+            padding: 0.5rem;
+            text-align: center;
+            font-size: 0.75rem;
+            color: #4b5563;
+            box-shadow: 0 -1px 3px rgba(0, 0, 0, 0.1);
+        }
+        .custom-input {
+            background-color: rgba(255, 255, 255, 0.9);
+            border: 1px solid #d1d5db;
+            transition: border-color 0.3s ease, box-shadow 0.3s ease;
+        }
+        .custom-input:focus {
+            border-color: #4f46e5;
+            box-shadow: 0 0 0 3px rgba(79, 70, 229, 0.2);
+        }
+        .custom-button {
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+        .custom-button:hover {
+            transform: translateY(-2px);
+        }
+        .loading-overlay {
+            background-color: rgba(0, 0, 0, 0.7);
+            backdrop-filter: blur(5px);
+        }
+        .loading-spinner {
+            border-top-color: #4f46e5;
+        }
+    </style>
 </head>
 <body>
-<div id="root">
+<div id="root"></div>
 <script type="text/babel">
 const { useState } = React;
 const { motion, AnimatePresence } = window.Motion;
